<resources>
    <string name="app_name">Satu</string>
    <string name="network_error_message">Network error occurred. Please check your internet connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="logo">Ini adalah logo Aplikasi Satu</string>
    <string name="title_logo">Semua pakai satu</string>
    <string name="welcome">Selamat Datang</string>
    <string name="tagline">Ini adalah tagline Kelola Tabungan dan Keuangan Dalam SATU Portal</string>
    <string name="label_button_masuk">Masuk M-Banking SATU</string>
    <string name="label_button_daftar">Daftar M-Banking SATU</string>
    <string name="tombol_button_masuk">Tombol masuk m-banking satu</string>
    <string name="tombol_button_daftar">Tombol keluar m-banking satu</string>
    <string name="tombol_back">Tombol Kembali</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda_description">Beranda</string>
    <string name="tabungan_description">Tabungan</string>
    <string name="qris_description">Qris</string>
    <string name="notifikasi_description">Notifikasi</string>
    <string name="akun_description">Akun</string>

    <!--   najma -->
    <string name="akun">Akun</string>
    <string name="akun_profil">Akun Profil</string>
    <string name="nama_akun">CHARINA LORENZA</string>
    <string name="email">charinacutezabiez@gmail.com</string>
    <string name="informasi_rekening_dan_kartu">Informasi Rekening dan Kartu</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="ubah_alamat_email">Ubah Alamat Email</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_pin">Ubah Pin</string>
    <string name="menu_pintasan">Menu Pintasan</string>
    <string name="bantuan">Bantuan</string>
    <string name="live_chat">Live Chat</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="syarat_ketentuan">Syarat dan Ketentuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="informasi">Informasi</string>
    <string name="panduan_pengguna">Panduan Pengguna</string>
    <string name="info_kurs">Info Kurs</string>
    <string name="info_saham">Info Saham</string>
    <string name="lokasi_atm_bca">Lokasi ATM BCA</string>
    <string name="lokasi_kantor_bca">Lokasi Kantor BCA</string>
    <string name="versi_aplikasi">Versi Aplikasi</string>
    <string name="slogan">SemuaPakaiSatu</string>
    <string name="log_out">Keluar</string>
    <string name="terapkan">Terapkan</string>
    <string name="mutasi_rekening">Mutasi Rekening</string>
    <string name="logout">Log Out</string>
    <string name="logout_desc">Apakah kamu ingin keluar dari aplikasi?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="description_ubah_alamat_email">Menu Ubah Alamat Email</string>
    <string name="description_ubah_password">Menu Ubah Password</string>
    <string name="description_ubah_pin">Ubah Pin</string>
    <string name="description_menu_pintasan">Menu Pintasan</string>
    <string name="description_live_chat">Menu Live Chat</string>
    <string name="description_kontak_kami">Menu Kontak Kami</string>
    <string name="description_syarat_ketentuan">Menu Syarat dan Ketentuan</string>
    <string name="description_kebijakan_privasi">Menu Kebijakan Privasi</string>
    <string name="description_panduan_pengguna">Menu Panduan Pengguna</string>
    <string name="description_info_kurs">Menu Info Kurs</string>
    <string name="description_info_saham">Menu Info Saham</string>
    <string name="lokasi_atm_satu">Lokasi ATM SATU</string>
    <string name="description_lokasi_atm_satu">Menu Lokasi ATM SATU</string>
    <string name="lokasi_kantor_satu">Lokasi Kantor SATU</string>
    <string name="description_lokasi_kantor_satu">Menu Lokasi Kantor SATU</string>
    <string name="description_log_out">Tombol Keluar</string>
    <string name="cek_mutasi">Cek Mutasi</string>
    <string name="description_cek_mutasi">Tombol Cek Mutasi</string>
    <string name="pilih">Pilih</string>
    <string name="description_pilih">Tombol Pilih</string>
    <string name="hari_ini">Hari ini</string>
    <string name="tujuh_hari_terakhir">7 hari terakhir</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="description_hari_ini">Periode hari ini</string>
    <string name="description_tujuh_hari_terakhir">Periode 7 hari terakhir</string>
    <string name="description_bulan_ini">Periode bulan ini</string>
    <string name="description_bulan_sebelum_bulan_ini">Periode bulan sebelum bulan ini</string>
    <string name="description_dua_bulan_sebelum_bulan_ini">Periode dua bulan sebelum bulan ini</string>
    <string name="description_pilih_periode_tangga_awal_dan_tanggal_akhir">Periode tanggal awal dan tanggal akhir</string>
    <string name="description_semua_transaksi">Semua transaksi</string>
    <string name="description_transaksi_masuk">Transaksi masuk</string>
    <string name="description_transaksi_keluar">Transaksi keluar</string>
    <string name="tigapuluh_hari_terakhir">30 hari terakhir</string>
    <string name="rentang_maksimum_periode">Rentang maksimum periode pemeriksaan mutasi rekening adalah 6 bulan terakhir</string>
    <string name="all">Semua</string>
    <string name="transaction_in">Transaksi masuk</string>
    <string name="transaction_out">Transaksi keluar</string>
    <string name="pin_transaksi">PIN Transaksi</string>
    <string name="silahkan_masukan_pin">Silahkan masukan PIN Anda</string>
    <string name="description_sumber_rekening">Pilih sumber rekening</string>
    <string name="description_periode_mutasi">Pilih periode mutasi</string>
    <string name="description_jenis_transaksi">Pilih jenis transaksi</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="nama_rekening">Nama Rekening</string>
    <string name="jenis_tabungan">Jenis Tabungan</string>
    <string name="periode_mutasi">Periode Mutasi</string>
    <string name="jenis_transaksi">Jenis Transaksi</string>
    <string name="description_nomor_rekening">Informasi nomor rekening</string>
    <string name="description_nama_rekening">Informasi nama rekening</string>
    <string name="description_jenis_tabungan">Informasi jenis tabungan</string>
    <string name="description_periode_mutasi_info">Informasi periode mutasi</string>
    <string name="description_jenis_transaksi_info">Informasi jenis transaksi</string>
    <string name="unduh">Unduh</string>
    <string name="description_unduh">Tombol Unduh</string>
    <string name="beranda">Beranda</string>
    <string name="description_beranda">Tombol Beranda</string>
    <string name="rentang_maksimum_cek_periode_mutasi">Rentang maksimum periode pemeriksaan mutasi rekening adalah 90 hari terakhir</string>
    <string name="description_satu">Satu</string>
    <string name="description_dua">Dua</string>
    <string name="description_tiga">Tiga</string>
    <string name="description_empat">Empat</string>
    <string name="description_lima">Lima</string>
    <string name="description_enam">Enam</string>
    <string name="description_tujuh">Tujuh</string>
    <string name="description_delapan">Delapan</string>
    <string name="description_sembilan">Sembilan</string>
    <string name="description_nol">Nol</string>
    <string name="description_hapus">Hapus</string>

</resources>