<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardElevation="2dp"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="70px"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:layout_marginTop="20dp"
                android:id="@+id/radioGroupDateRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:contentDescription="@string/description_semua_transaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:id="@+id/tvAll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/rbAll"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="start|center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"/>
                    <RadioButton
                        android:id="@+id/rbAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="end|center_vertical"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:contentDescription="@string/description_transaksi_masuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:id="@+id/tvTransactionIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_in"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/rbTransactionIn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="start|center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"/>
                    <RadioButton
                        android:id="@+id/rbTransactionIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="end|center_vertical"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:contentDescription="@string/description_transaksi_keluar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:id="@+id/tvTransactionOut"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_out"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/rbTransactionOut"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="start|center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"/>
                    <RadioButton
                        android:id="@+id/rbTransactionOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="end|center_vertical"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:contentDescription="@string/description_pilih"
                android:layout_gravity="center_vertical"
                android:id="@+id/applyButton"
                android:layout_marginTop="70dp"
                android:textColor="@android:color/darker_gray"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/disable"
                android:text="@string/pilih"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="20sp"
                app:cornerRadius="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
