<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    tools:context=".ui.activities.auth.repeateduser.onboarding.OnBoardingRepeadUserActivity">


    <ImageView
        android:id="@+id/iv_decorative"
        android:layout_width="268dp"
        android:layout_height="347dp"
        android:src="@drawable/ic_decorative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/welcome"
        android:contentDescription="@string/welcome"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_bold"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/tagline"
        android:contentDescription="@string/tagline"
        android:fontFamily="@font/opensans_bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <Button
        android:id="@+id/btn_login_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_masuk"
        android:contentDescription="@string/tombol_button_masuk"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text1"
        app:layout_constraintBottom_toTopOf="@id/tv_text2"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/ColorPrimary"
        android:fontFamily="@font/opensans_semibold"
        android:padding="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>



    <TextView
        android:id="@+id/tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="PT. Satu Solusi Utama Tbk."
        android:contentDescription="PT. Satu Solusi Utama Tbk."
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_onboarding"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v.1.0.1"
        android:contentDescription="versi 1.0.1"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text2"/>

</androidx.constraintlayout.widget.ConstraintLayout>