<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView

            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:contentDescription="@string/description_sumber_rekening"
                android:background="@drawable/cardview_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:contentDescription="@string/description_nomor_rekening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/open_sans_medium"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/nomor_rekening"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginBottom="5dp"
                            android:id="@+id/tvMutationAccountNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:textColor="@color/primary"
                            android:text="12991213145"
                            android:textColorHint="@color/disable"
                            android:textSize="14sp"
                            android:fontFamily="@font/open_sans_bold"
                            android:layout_weight="1"
                            android:paddingRight="10dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:contentDescription="@string/description_nama_rekening"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/open_sans_medium"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/nama_rekening"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvMutationAccountName"
                                android:layout_marginBottom="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textColor="@color/primary"
                                android:text="Karina Atifah Hana"
                                android:textColorHint="@color/disable"
                                android:textSize="14sp"
                                android:fontFamily="@font/open_sans_bold"
                                android:layout_weight="1"
                                android:paddingRight="10dp"/>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:contentDescription="@string/description_jenis_tabungan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/open_sans_medium"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/jenis_tabungan"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvMutationAccountType"
                                android:layout_marginBottom="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textColor="@color/primary"
                                android:text="Saver+"
                                android:textColorHint="@color/disable"
                                android:textSize="14sp"
                                android:fontFamily="@font/open_sans_bold"
                                android:layout_weight="1"
                                android:paddingRight="10dp"/>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:contentDescription="@string/description_periode_mutasi_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/open_sans_medium"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/periode_mutasi"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvMutationAccountPeriode"
                                android:layout_marginBottom="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textColor="@color/primary"
                                android:text="Juli 2024"
                                android:textColorHint="@color/disable"
                                android:textSize="14sp"
                                android:fontFamily="@font/open_sans_bold"
                                android:layout_weight="1"
                                android:paddingRight="10dp"/>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:contentDescription="@string/description_jenis_transaksi_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/open_sans_medium"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/jenis_transaksi"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvMutationAccountTransactionType"
                                android:layout_marginBottom="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textColor="@color/primary"
                                android:text="Semua"
                                android:textColorHint="@color/disable"
                                android:textSize="14sp"
                                android:fontFamily="@font/open_sans_bold"
                                android:layout_weight="1"
                                android:paddingRight="10dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPeriodeMutation"
                    android:background="@color/disable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/open_sans_semibold"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="Juli 2024"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMutationHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:background="@android:color/transparent"
            android:orientation="horizontal">
            <LinearLayout
                android:contentDescription="@string/description_unduh"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview_border">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDonwload"
                        android:contentDescription="@string/unduh"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primary"
                        android:paddingVertical="10dp"
                        android:text="@string/unduh"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:contentDescription="@string/description_beranda"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:background="@drawable/cardview_border">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvHome"
                        android:contentDescription="@string/description_beranda"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/open_sans_bold"
                        android:textColor="@color/white"
                        android:paddingVertical="10dp"
                        android:text="@string/beranda"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

